updated entire "about" sections
who updated
why
partners

--- a/app/who.html
+++ b/app/who.html
@@ -32,10 +32,10 @@
 			</div>
 			<div class="seven columns">
 				<ul class="nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a href="about.html">About</a>
 					</li>
 					<li class="nav-item">
@@ -50,88 +50,89 @@
 				</ul>
 			</div>
 		</div>
-
 		<div class="body row">
 			<div class="four columns offset-by-eight">
 				<div class="link">
 					<a href="who.html">Who</a>
 				</div>
 			</div>
-
 			<div class="four columns offset-by-eight">
 				<div class="link">
 					<a href="why.html">Why</a>
 				</div>
 			</div>
-					<div class="four columns offset-by-eight">
-		<div class="link">
-			<a href="partners.html">Partners</a>
-		</div>
-	</div>
-			<div class="content-container">
-					<div class="twelve columns">
-						<div class="content">
-							<h4>Who We Are</h4>
-						</div>
-					</div>
+			<div class="four columns offset-by-eight">
+				<div class="link">
+					<a href="partners.html">Partners</a>
+				</div>
 			</div>
-			<div class="vert-pad">
-				<div class="content">
+			<div class="twelve columns content-container">
+				<div class="row">
+					<div class="twelve columns">
+						<h4>Who We Are</h4>
+					</div>
+				</div>
+				<div class="row">
 					<div class="three columns">
-						<div class="who-image">
-							<img src="http://placehold.it/200x150&text=image+one+here"></div>
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
 					</div>
 					<div class="nine columns">
-						<div class="who-text">
+						<div class="partner-text">
+							<p class="strong">Amber Caldwell</p>
 							<p>
-								Amber Caldwell.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong">Jaymie Henry-Ang:</p>
+							<p>
+								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong">Andrew Pedkte</p>
+							<p>
+								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong">Stephanie Tomasky</p>
+							<p>
+								This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			</div>
-			<div class="row vert-pad">
-				<div class="three columns">
-					<div class="who-image">
-						<img src="http://placehold.it/200x150&text=image+three+here"></div>
-				</div>
-				<div class="nine columns">
-					<div class="who-text">
-						<p>
-							Andrew Pedtke, MD.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="three columns">
-					<div class="who-image">
-						<img src="http://placehold.it/200x150&text=image+three+here"></div>
-				</div>
-				<div class="nine columns">
-					<div class="who-text">
-						<p>
-							Stephanie Tomasky.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="three columns">
-					<div class="who-image">
-						<img src="http://placehold.it/200x150&text=image+three+here"></div>
-				</div>
-				<div class="nine columns">
-					<div class="who-text">
-						<p>
-							Jayme Henry Ang.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-						</p>
-					</div>
-				</div>
-			</div>
-			<script src="javascripts/jquery.js"></script>
-			<script src="javascripts/foundation.min.js"></script>
-			<script src="javascripts/app.js"></script>
+		</div>
+
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
 </body>
-		</html>
+	</html>
