updated text, about and schedule page

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -57,66 +57,115 @@
 						<div>
 							<h5>Saturday July 6, 2013</h5>
 							<h5>Location TBD</h5>
-							<h5>7pm-10pm, with live performance by XX after premier</h5>
+							<h5>
+								7pm-10pm film premier and Q+A, followed by a live performance from XX
+							</h5>
 							<h5>RSVP on Facebook here!</h5>
 						</div>
 					</div>
 				</div>
-			<div class="twelve columns">
-				<h4>Feature Film</h4>
+				<div class="twelve columns">
+					<h4>Feature Film</h4>
+				</div>
+				<div class="row">
+					<div class= "three columns image">
+						<img src="http://placehold.it/200x150&text=image+one+here"></div>
+					<div class="nine columns">
+						<p class="strong long-text">Title of Film (time)</p>
+						<p class="long-text">
+							This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+						</p>
+					</div>
+				</div>
+				<div class="twelve columns vert-pad">
+					<h5>Short Films</h5>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here">
+						</div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong long-text">Title of Film (time)</p>
+							<p class="long-text">
+								This is the description of film 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong long-text">Title of Film (time)</p>
+							<p class="long-text">
+								This is the description of film 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong long-text">Title of Film (time)</p>
+							<p class="long-text">
+								This is the description of film 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+					<div class="twelve columns">
+						<h4>Panel of Experts</h4>
+					</div>
+					<div class="row">
+						<div class="three columns">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
+						<div class="nine columns">
+							<div class="partner-text">
+								<p class="strong long-text">Amber Caldwell</p>
+								<p class="long-text">
+									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row vert-pad">
+						<div class="three columns">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
+						<div class="nine columns">
+							<div class="partner-text">
+								<p class="strong long-text">Amber Caldwell</p>
+								<p class="long-text">
+									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class= "three columns image">
-				<img src="http://placehold.it/200x150&text=image+one+here"></div>
-			<div class="nine columns">
-				<p class="strong text">Title of Film (time)</p>
-				<p>
-					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
-				</p>
-			</div>
-		<div class="twelve columns vert-pad">
-			<h4>Short Films</h4>
 		</div>
-		<div class="three columns image">
-			<img src="http://placehold.it/200x150&text=image+one+here"></div>
-		<div class="nine columns">
-				<p class="strong">Title of Film (time)</p>
-				<p>
-					This is a description of film 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				</p>
-			</div>
-			<div class="twelve columns">
-		</div>
-		<div class="vert-pad">
-		<div class="three columns image">
-			<img src="http://placehold.it/200x150&text=image+one+here"></div>
-		<div class="nine columns vert-pad">
-				<p class="strong">Title of Film (time)</p>
-				<p>
-					This is a description of film 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				</p>
-			</div>
-		</div>
-			<div class="twelve columns">
-		</div>
-		<div class="three columns">
-			<img src="http://placehold.it/200x150&text=image+one+here"></div>
-		<div class="nine columns">
-				<p class="strong">Title of Film (time)</p>
-				<p>
-					This is a description of film 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				</p>
-			</div>
-		</div>
-	</div>
 
-
-<div class="footer row">
-<div class="twelve columns">
-<div class="content">This is some footer content</div>
-</div>
-</div>
-<script src="javascripts/jquery.js"></script>
-<script src="javascripts/foundation.min.js"></script>
-<script src="javascripts/app.js"></script>
+		<div class="footer row">
+			<div class="twelve columns">
+				<div class="content">This is some footer content</div>
+			</div>
+		</div>
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
