--- a/app/who.html
+++ b/app/who.html
@@ -31,7 +31,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="nav main-nav">
 					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
@@ -50,40 +50,32 @@
 				</ul>
 			</div>
 		</div>
+
 		<div class="body row">
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="who.html">Who</a>
-				</div>
-			</div>
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="why.html">Why</a>
-				</div>
-			</div>
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="partners.html">Partners</a>
-				</div>
-			</div>
 			<div class="twelve columns content-container">
 				<div class="row">
+					<div class="twelve columns">
+						<ul class="nav sub-nav">
+							<li class="nav-item active">
+								<a href="who.html">Who</a>
+							</li>
+							<li class="nav-item">
+								<a href="why.html">Why</a>
+							</li>
+							<li class="nav-item">
+								<a href="partners.html">Partners</a>
+							</li>
+						</ul>
+					</div>
 					<div class="twelve columns">
 						<h4>Who We Are</h4>
 					</div>
 				</div>
 				<div class="row">
-					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
-					</div>
-					<div class="nine columns">
-						<div class="partner-text">
-							<p class="strong">Amber Caldwell</p>
-							<p>
-								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-						</div>
+					<div class="twelve columns">
+						<p class="long-text">
+							The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
+						</p>
 					</div>
 				</div>
 				<div class="row vert-pad">
@@ -93,9 +85,9 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong">Jaymie Henry-Ang:</p>
-							<p>
-								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							<p class="strong long-text">Amber Caldwell</p>
+							<p class="long-text">
+								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
 					</div>
@@ -107,9 +99,9 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong">Andrew Pedkte</p>
-							<p>
-								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							<p class="strong long-text">Jaymie Henry-Ang:</p>
+							<p class="long-text">
+								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
 					</div>
@@ -121,8 +113,22 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong">Stephanie Tomasky</p>
-							<p>
+							<p class="strong long-text">Andrew Pedkte</p>
+							<p class="long-text">
+								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong long-text">Stephanie Tomasky</p>
+							<p class="long-text">
 								This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
