--- a/app/index.html
+++ b/app/index.html
@@ -53,17 +53,21 @@
 
 	<div class="body row">
 		<div class="twelve columns">
-			<div class="content">
-				This is some body content
+			<div class="video">
+					<iframe src="http://player.vimeo.com/video/59388957" width="700" height="350" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			</div>
+			<div class="home-text">
+				<p class="home-text"><span class="strong">The Right to Heal</span>
+				Saturday July 16th, 2013
+				Venue Goes Here
+				</div>
+		</div>
+		<div class="twelve columns">
 		</div>
 	</div>
 
 	<div class="footer row">
 		<div class="twelve columns">
-			<div class="content">
-				This is some footer content
-			</div>
 		</div>
 	</div>
 
