--- a/app/partners.html
+++ b/app/partners.html
@@ -53,24 +53,19 @@
 
 		<div class="body row">
 			<div class="twelve columns content-container">
-
 				<div class="row">
 					<div class="twelve columns">
-						<h4>Partners</h4>
-					</div>
-				</div>
-				<div class="row">
-					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
-					</div>
-					<div class="nine columns">
-						<div class="partner-text">
-							<p class="strong">IGOT</p>
-							<p>
-								This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-						</div>
+						<ul class="nav sub-nav">
+							<li class="nav-item active">
+								<a href="who.html">Who</a>
+							</li>
+							<li class="nav-item">
+								<a href="why.html">Why</a>
+							</li>
+							<li class="nav-item">
+								<a href="partners.html">Partners</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<div class="row vert-pad">
@@ -80,27 +75,27 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<P class="strong">GPAS</p>
-							<p>
+							<p class="strong long-text">IGOT</p>
+							<p class="long-text">
+								This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong long-text">GPAS</p>
+							<p class="long-text">
 								This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
 					</div>
 				</div>
-						<div class="row">
-							<div class="three columns">
-								<div class="partner-image">
-									<img src="http://placehold.it/200x150&text=image+two+here"></div>
-							</div>
-							<div class="nine columns">
-								<div class="partner-text">
-									<P class="strong">Own2Feet</p>
-									<p>
-										This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-									</p>
-								</div>
-							</div>
-						</div>
 						<div class="row vert-pad">
 							<div class="three columns">
 								<div class="partner-image">
@@ -108,15 +103,32 @@
 							</div>
 							<div class="nine columns">
 								<div class="partner-text">
-									<P class="strong">ALittle4Alot</p>
-									<p>
+									<p class="strong long-text">Own2Feet</p>
+									<p class="long-text">
+										This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="three columns">
+								<div class="partner-image">
+									<img src="http://placehold.it/200x150&text=image+two+here">
+								</div>
+							</div>
+							<div class="nine columns">
+								<div class="partner-text">
+									<p class="strong long-text"> ALittle4Alot
+									</p>
+									<p class="long-text">
 										This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 									</p>
 								</div>
 							</div>
 						</div>
-			</div>
-		</div>
+					</div>
+				</div>
+	
 	<div class="footer row">
 		<div class="twelve columns">
 			<div class="content">This is some footer content</div>
