--- a/app/why.html
+++ b/app/why.html
@@ -52,79 +52,70 @@
 		</div>
 <body>
 		<div class="body row">
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="who.html">Who</a>
-				</div>
-			</div>
-
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="why.html">Why</a>
-				</div>
-			</div>
-			<div class="four columns offset-by-eight">
-				<div class="link">
-					<a href="partners.html">Partners</a>
-				</div>
-			</div>
-			<div class="twelve columns">
-				<div class="content">
-					<h4>Why we are here</h4>
-				</div>
-			</div>
-			<div class="vert-pad">
-				<div class="long-text">
+			<div class="twelve columns content-container">
+				<div class="row">
 					<div class="twelve columns">
-						<p>
-							Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
-The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
+						<ul class="nav sub-nav">
+							<li class="nav-item">
+								<a href="who.html">Who</a>
+							</li>
+							<li class="nav-item active">
+								<a href="why.html">Why</a>
+							</li>
+							<li class="nav-item">
+								<a href="partners.html">Partners</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			<div class="row">
+					<div class="twelve columns">
+						<p class="long-text">
+						The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
 						</p>
 					</div>
-					<div class="row">
-						<div class="one columns"></div>
-						<div class="eleven columns">
-							<p class="strong">Safe, effective surgery globally</p>
-							<p>
+			</div>
+					<div class="row vert-pad">
+						<div class="twelve columns">
+							<p class="strong long-text">Safe, effective surgery globally</p>
+							<p class="long-text">
 								Did you know XX% of the world die or are disabled due to lack of access to surgery
 							</p>
 						</div>
 					</div>
-					<div class="row vert-pad">
-						<div class="one columns"></div>
-						<div class="eleven columns">
-							<p class="strong">Safe, clean and effective hospital systems</p>
-							<p>
+					<div class="row">
+						<div class="twelve columns">
+							<p class="strong long-text ">Safe, clean and effective hospital systems</p>
+							<p class="long-text">
 								Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
 							</p>
 						</div>
 					</div>
-					<div class="row">
-						<div class="one columns"></div>
-						<div class="eleven columns">
-							<p class="strong">Access to rehabilitation and therapy</p>
-							<p>
+					<div class="row vert-pad">
+						<div class="twelve columns">
+							<p class="strong long-text">Access to rehabilitation and therapy</p>
+							<p class="long-text">
 								Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
 							</p>
 						</div>
 					</div>
-					<div class="row vert-pad">
-						<div class="one columns"></div>
-						<div class="eleven columns">
-							<p class="strong">Public policy and resource allocation for surgical systems</p>
-							<p>
+					<div class="row">
+						<div class="twelve columns">
+							<p class="strong long-text">Public policy and resource allocation for surgical systems</p>
+							<p class="long-text">
 								Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
 							</p>
 						</div>
 					</div>
-					<div class="twelve columns">
-						<p>
+					<div class="row">
+					<div class="twelve columns vert-pad">
+						<p class="long-text strong">
 							Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink
 						</p>
 					</div>
+					</div>
 				</div>
 			</div>
-		</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
