--- a/app/schedule.html
+++ b/app/schedule.html
@@ -58,12 +58,13 @@
 							<h5>Saturday July 6, 2013</h5>
 							<h5>Location TBD</h5>
 							<h5>
-								7pm-10pm film premier and Q+A, followed by a live performance from XX
+								7pm-10pm film premier and Q+A, followed by a live performance from XX (hyperlink)
 							</h5>
 							<h5>RSVP on Facebook here!</h5>
 						</div>
 					</div>
 				</div>
+				<div class="vert-pad"></div>
 				<div class="twelve columns">
 					<h4>Feature Film</h4>
 				</div>
@@ -77,7 +78,8 @@
 						</p>
 					</div>
 				</div>
-				<div class="twelve columns vert-pad">
+				<div class="vert-pad"></div>
+				<div class="twelve columns">
 					<h5>Short Films</h5>
 				</div>
 				<div class="row">
@@ -112,7 +114,8 @@
 				<div class="row">
 					<div class="three columns">
 						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+							<img src="http://placehold.it/200x150&text=image+two+here">
+						</div>
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
@@ -122,8 +125,10 @@
 							</p>
 						</div>
 					</div>
+				</div>
+				<div class="vert-pad"></div>
 					<div class="twelve columns">
-						<h4>Panel of Experts</h4>
+						<h5>Panel of Experts</h5>
 					</div>
 					<div class="row">
 						<div class="three columns">
@@ -133,9 +138,10 @@
 						</div>
 						<div class="nine columns">
 							<div class="partner-text">
-								<p class="strong long-text">Amber Caldwell</p>
+								<p class="strong long-text">Name
+								</p>
 								<p class="long-text">
-									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+									This is the description of expert 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 								</p>
 							</div>
 						</div>
@@ -148,14 +154,30 @@
 						</div>
 						<div class="nine columns">
 							<div class="partner-text">
-								<p class="strong long-text">Amber Caldwell</p>
+								<p class="strong long-text">Name</p>
 								<p class="long-text">
-									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+									This is the description of Expert 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 								</p>
 							</div>
 						</div>
 					</div>
-				</div>
+						<div class="row">
+						<div class="three columns">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
+						<div class="nine columns">
+							<div class="partner-text">
+								<p class="strong long-text">Name</p>
+								<p class="long-text">
+									This is the description of Expert 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="vert-pad">
+					</div>
 			</div>
 		</div>
 
